--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-datasource.url=jdbc:postgresql://localhost:5432/db-training
+datasource.url=jdbc:postgresql://localhost:5432/DB
 datasource.username=postgres
-datasource.password=postgres
+datasource.password=neznamho
